--- a/k-server/view/index.html
+++ b/k-server/view/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <header>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
+  <meta name="format-detection" content="telephone=no, email=no">
+  <meta name="apple-touch-fullscreen" content="yes">
   <title>rz platform</title>
 </header>
 <body>
