fix: BrowserRouter 404 error when fresh page

--- a/src/assets/scss/login.scss
+++ b/src/assets/scss/login.scss
@@ -54,11 +54,11 @@
   }
   .login-bottom {
     margin-top: rem(36);
+    padding: 0 rem(30);
     display: flex;
     justify-content: space-between;
     .login-btn {
       width: rem(300);
-      height: rem(60);
     }
   }
 
