--- a/k-server/view/index.html
+++ b/k-server/view/index.html
@@ -1,11 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <header>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
   <meta name="format-detection" content="telephone=no, email=no">
   <meta name="apple-touch-fullscreen" content="yes">
   <title>rz platform</title>
+  <script src="/dist/js/main.js"></script>
 </header>
+
 <body>
   <div id="app"></div>
+  <script src="js/main.js"></script>
 </body>
