upfate: update config

--- a/src/assets/scss/login.scss
+++ b/src/assets/scss/login.scss
@@ -2,7 +2,7 @@
 @import './config/mixin.scss';
 @import './config/base.scss';
 
-.za-market-login {
+.zr-platform-login {
   position: absolute;
   left: 50%;
   top: 50%;
